test/memory/allocation/errors/align1-error.good
align1-error.chpl:3: error: halt reached - c_aligned_alloc called with alignment smaller than pointer size
